--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -6,8 +6,8 @@ http://www.templatemo.com/tm-483-lumino
 
 */
 body {
-	font-family: 'Times New Roman', Helvetica, Arial, sans-serif;
-	font-size: 19px;
+	font-family: 'Times New Roman', Georgia, Times, serif, Arial, sans-serif;
+	font-size: 29px;
 	font-weight: 100;
 }
 
